Fix BListView drag n' drop in multi-select mode

Move list selection logic into MouseUp instead of MouseDown.
Allow double-click on primary mouse button only
Allow drag on primary mouse button only

Fixes #9190