src/kits/interface/ListView.cpp
@@ -35,6 +35,7 @@ struct track_data {
 	bool		try_drag;
 	bool		is_dragging;
 	bigtime_t	last_click_time;
+	int32		button;
 };
 
 
@@ -545,73 +546,96 @@ BListView::MouseDown(BPoint where)
 		Sync();
 		Window()->UpdateIfNeeded();
 	}
-
-	BMessage* message = Looper()->CurrentMessage();
+	
 	int32 index = IndexOf(where);
-
 	int32 buttons = 0;
-	if (message != NULL)
-		message->FindInt32("buttons", &buttons);
-
 	int32 modifiers = 0;
+	
+	BMessage* message = Looper()->CurrentMessage();
+	if (message != NULL) {
+		PRINT_OBJECT(*message);
+		message->FindInt32("buttons", &buttons);
+		message->FindInt32("modifiers", &modifiers);
+	}
+
+	// Double-click and drag done with primary mouse button only
+	if (buttons & B_PRIMARY_MOUSE_BUTTON) {
+		// If the user double (or more) clicked within the current selection,
+		// we don't change the selection but invoke the selection.
+		// TODO: move this code someplace where it can be shared everywhere
+		// instead of every class having to reimplement it, once some sane
+		// API for it is decided.
+		BPoint delta = where - fTrack->drag_start;
+		bigtime_t sysTime;
+		Window()->CurrentMessage()->FindInt64("when", &sysTime);
+		bigtime_t timeDelta = sysTime - fTrack->last_click_time;
+		bigtime_t doubleClickSpeed;
+		get_click_speed(&doubleClickSpeed);
+		bool doubleClick = false;
+	
+		if (timeDelta < doubleClickSpeed
+			&& fabs(delta.x) < kDoubleClickThreshold
+			&& fabs(delta.y) < kDoubleClickThreshold
+			&& fTrack->item_index == index) {
+			doubleClick = true;
+		}
+	
+		if (doubleClick && index >= fFirstSelected && index <= fLastSelected) {
+			fTrack->drag_start.Set(INT32_MAX, INT32_MAX);
+			Invoke();
+			return BView::MouseDown(where);
+		}
+	
+		if (!doubleClick) {
+			fTrack->drag_start = where;
+			fTrack->last_click_time = system_time();
+			fTrack->item_index = index;
+			fTrack->was_selected = index >= 0 ? ItemAt(index)->IsSelected() : false;
+			fTrack->try_drag = true;
+			fTrack->button = buttons;
+	
+			MouseDownThread<BListView>::TrackMouse(this,
+				&BListView::_DoneTracking, &BListView::_Track);
+		}
+	}
+
+	BView::MouseDown(where);
+}
+
+
+void
+BListView::MouseUp(BPoint where)
+{
+	int32 modifiers = 0;
+	
+	BMessage* message = Looper()->CurrentMessage();
 	if (message != NULL)
 		message->FindInt32("modifiers", &modifiers);
-
-	// If the user double (or more) clicked within the current selection,
-	// we don't change the selection but invoke the selection.
-	// TODO: move this code someplace where it can be shared everywhere
-	// instead of every class having to reimplement it, once some sane
-	// API for it is decided.
-	BPoint delta = where - fTrack->drag_start;
-	bigtime_t sysTime;
-	Window()->CurrentMessage()->FindInt64("when", &sysTime);
-	bigtime_t timeDelta = sysTime - fTrack->last_click_time;
-	bigtime_t doubleClickSpeed;
-	get_click_speed(&doubleClickSpeed);
-	bool doubleClick = false;
-
-	if (timeDelta < doubleClickSpeed
-		&& fabs(delta.x) < kDoubleClickThreshold
-		&& fabs(delta.y) < kDoubleClickThreshold
-		&& fTrack->item_index == index) {
-		doubleClick = true;
-	}
-
-	if (doubleClick && index >= fFirstSelected && index <= fLastSelected) {
-		fTrack->drag_start.Set(INT32_MAX, INT32_MAX);
-		Invoke();
-		return BView::MouseDown(where);
-	}
-
-	if (!doubleClick) {
-		fTrack->drag_start = where;
-		fTrack->last_click_time = system_time();
-		fTrack->item_index = index;
-		fTrack->was_selected = index >= 0 ? ItemAt(index)->IsSelected() : false;
-		fTrack->try_drag = true;
-
-		MouseDownThread<BListView>::TrackMouse(this,
-			&BListView::_DoneTracking, &BListView::_Track);
-	}
-
-	if (index >= 0) {
+	
+	// Evaluate selection based on the selected index
+	// at the time of the mouse starting to track.
+	// Otherwise we cannot properly handle dragging and dropping
+	// with multi-select list.
+	//
+	// Determine mouse button used by checking the tracking data
+	// since the 'buttons' field of the message isn't populated
+	// in MouseUp.
+	int32 index = fTrack->item_index;
+	int32 button = fTrack->button;
+	if (button & B_PRIMARY_MOUSE_BUTTON && index >= 0) {
 		if (fListType == B_MULTIPLE_SELECTION_LIST) {
 			if ((modifiers & B_SHIFT_KEY) != 0) {
 				// select entire block
-				// TODO: maybe review if we want it like in Tracker
-				// (anchor item)
-				if (index >= fFirstSelected && index < fLastSelected) {
+				if (index >= fFirstSelected && index < fLastSelected) 
 					// clicked inside of selected items block, deselect all
 					// but from the first selected item to the clicked item
 					DeselectExcept(fFirstSelected, index);
-				} else {
+				else
 					Select(std::min(index, fFirstSelected), std::max(index,
 						fLastSelected));
-				}
 			} else {
 				if ((modifiers & B_COMMAND_KEY) != 0) {
 					// toggle selection state of clicked item (like in Tracker)
-					// toggle selection state of clicked item
 					if (ItemAt(index)->IsSelected())
 						Deselect(index);
 					else
@@ -628,14 +652,7 @@ BListView::MouseDown(BPoint where)
 		}
 	} else if ((modifiers & B_COMMAND_KEY) == 0)
 		DeselectAll();
-
-	 BView::MouseDown(where);
-}
-
-
-void
-BListView::MouseUp(BPoint where)
-{
+	
 	BView::MouseUp(where);
 }
 
@@ -1989,17 +2006,6 @@ BListView::_Track(BPoint where, uint32)
 			fTrack->try_drag = false;
 			fTrack->is_dragging = InitiateDrag(fTrack->drag_start,
 				fTrack->item_index, fTrack->was_selected);
-		}
-	}
-
-	if (!fTrack->is_dragging) {
-		// do selection only if a drag was not initiated
-		int32 index = IndexOf(where);
-		BListItem* item = ItemAt(index);
-		if (item != NULL && !item->IsSelected() && item->IsEnabled()) {
-			Select(index, fListType == B_MULTIPLE_SELECTION_LIST
-				&& (modifiers() & B_SHIFT_KEY) != 0);
-			ScrollToSelection();
 		}
 	}
 }
